--- a/index.html
+++ b/index.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year New Me</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <header>
+<!------------Banner Section-------------------------------->
+<div class="banner">
+    <img src="./images/banner/banner2.png" alt="">
+<div class="banner-description">
+    <h1 class="banner-title">
+        All Thinks Are <br> Possible If You <br> believe  
+    </h1>
+    <p class="banner-desc">
+        There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words
+    </p>
+    <button class="banner-btn">
+        Contact Us
+    </button>
+</div>
+</div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
