my failure section added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
+<script src="https://kit.fontawesome.com/f928a3bb51.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
@@ -28,7 +29,27 @@
 </div>
     </header>
     <main>
-
+<!-----Failures Section--------------->
+<div class="failure-section-container">
+    <div class="failure-section-img">
+        <img src="./images/person-removebg-preview.png" alt="">
+    </div>
+    <div class="failure-section-content">
+       <h2 class="failure-section-title">My failures of <br> previous year</h2> 
+       <p class="failure-section-desc">
+        Contrary to popular belief, Lorem Ipsum is not <br> simply random text. It has roots in a piece of <br> classical Latin literature from 45 BC, making it over <br> 2000 years old. Richard McClintock.
+       </p>
+       <ul>
+        <li class="list"><i class="fa-solid fa-check check"></i> Contrary to popular belief, is not simply.</li>
+        <li class="list"><i class="fa-solid fa-check check"></i> Contrary to popular belief, is not simply.</li>
+        <li class="list"><i class="fa-solid fa-check check"></i> Contrary to popular belief, is not simply.</li>
+        <li class="list"><i class="fa-solid fa-check check"></i> Contrary to popular belief, is not simply.</li>
+        <li class="list"><i class="fa-solid fa-check check"></i> Contrary to popular belief, is not simply.</li>
+        
+      
+       </ul>
+    </div>
+</div>
     </main>
     <footer>
 
