--- a/index.html
+++ b/index.html
@@ -45,11 +45,37 @@
         <li class="list"><i class="fa-solid fa-check check"></i> Contrary to popular belief, is not simply.</li>
         <li class="list"><i class="fa-solid fa-check check"></i> Contrary to popular belief, is not simply.</li>
         <li class="list"><i class="fa-solid fa-check check"></i> Contrary to popular belief, is not simply.</li>
-        
-      
        </ul>
     </div>
 </div>
+
+<!---------------My Plans---------------------------------------->
+<h2 class="plans-title">
+    My Plans
+</h2>
+<div class="my-plans-container">
+    <div class="plans">
+        <img class="plans-img" src="./images/icons/web.png" alt="">
+        <h3 class="plan-title">Web Development</h3>
+        <p class="plans-desc">I want To start</p>
+    </div>
+    <div class="plans">
+        <img class="plans-img" src="./images/icons/js.png" alt="">
+        <h3 class="plan-title">javascript</h3>
+        <p class="plans-desc">javascript i want to learn</p>
+    </div>
+    <div class="plans">
+        <img class="plans-img" src="./images/icons/smoke.png" alt="">
+        <h3 class="plan-title">Smoking habit</h3>
+        <p class="plans-desc">I want To end</p>
+    </div>
+    <div class="plans">
+        <img class="plans-img" src="./images/icons/ecom.png" alt="">
+        <h3 class="plan-title">E-commerce</h3>
+        <p class="plans-desc">I want To develop</p>
+    </div>
+</div>
+<!------------------------------------------------->
     </main>
     <footer>
 
